--- a/views/website_layout.xml
+++ b/views/website_layout.xml
@@ -39,6 +39,8 @@
                 <t t-set="save_user_info" t-value="request.env['ir.config_parameter'].sudo().get_param('elevenlabs_agent.save_user_info', 'False') == 'True'"/>
                 <t t-set="enable_conversation_logging" t-value="request.env['ir.config_parameter'].sudo().get_param('elevenlabs_agent.enable_conversation_logging', 'False') == 'True'"/>
                 <t t-set="daily_usage_limit" t-value="int(request.env['ir.config_parameter'].sudo().get_param('elevenlabs_agent.daily_usage_limit', '0'))"/>
+                <t t-set="global_usage_limit" t-value="int(request.env['ir.config_parameter'].sudo().get_param('elevenlabs_agent.global_usage_limit', '0'))"/>
+                <t t-set="max_messages_per_conversation" t-value="int(request.env['ir.config_parameter'].sudo().get_param('elevenlabs_agent.max_messages_per_conversation', '0'))"/>
 
                 <!-- Product Integration -->
                 <t t-set="product_categories_include" t-value="request.env['ir.config_parameter'].sudo().get_param('elevenlabs_agent.product_categories_include', '')"/>
@@ -89,6 +91,8 @@
                      t-att-data-save-user-info="str(save_user_info).lower()"
                      t-att-data-enable-conversation-logging="str(enable_conversation_logging).lower()"
                      t-att-data-daily-usage-limit="str(daily_usage_limit)"
+                     t-att-data-global-usage-limit="str(global_usage_limit)"
+                     t-att-data-max-messages-per-conversation="str(max_messages_per_conversation)"
                      t-att-data-product-categories-include="product_categories_include"
                      t-att-data-product-categories-exclude="product_categories_exclude"
                      t-att-data-featured-products-priority="featured_products_priority"
